# kismet-client

./: .env.example  .gitignore  .wallet.enc  .wallet.public.enc  README.md  client.js  package-lock.json  package.json  schema.sql  server.js  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/static/: addon-detail.html  addons.html  api-key.html  chat.html  help.html  index.html  logout.html  ollama.html  settings.html  sidebar.html  wallet.html  wizard.html
src-tauri/static/css/: help.css  sidebar.css  styles.css  wallet.css
src-tauri/static/js/: api-key.js  chat.js  main.js  settings.js  wallet.js
src/clients/ai/: index.js
src/clients/ai/ollama/: installer.js  ollama.js
src/clients/websocket/: client.js
src/core/: addon.js  app.js  engine.js  memory.js  services.js  user.js
src/core/services/: database.js  vector.js  websocket.js
src/errors/: databaseErrorHandler.js
src/services/: wallet.service.js
src/tasks/: index.js
src/tasks/core/: manager.js  queue.js
src/tasks/lib/: discordTask.js  monitorTask.js  task.js  twitterMentionTask.js
src/tasks/utils/: persistence.js  validation.js
src/utils/: logger.js
src/utils/readline/: prompt.js
src/utils/storage/: postgres.js
