[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[profile.dev.package.objc2]
debug-assertions = false

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
tauri = { version = "2.2.4", features = ["unstable"] }
tauri-plugin-log = "2.2.0"
wry = "0.48.1"
tauri-plugin-shell = "2.2.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
